tests/errors/sem.invalid-return.outside-function.or
y := false;
x := { if y then return; true; };

main :: () -> void {
};
